--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -930,43 +930,46 @@ code {
   padding-bottom: 20px
 }
 
-.editable_heading_text
-{
+.editable_heading_text {
   font-size: 18px;
   font-weight: bold;
   display: flex;
   align-items: center;
   padding-bottom: 20px;
+
   h2 {
     font-size: 18px;
     font-weight: bold;
     margin-right: 10px;
   }
+
   i {
     cursor: pointer;
   }
 }
-.editable_heading_textbox
-{
+
+.editable_heading_textbox {
   display: flex;
   align-items: center;
   padding-bottom: 12px;
+
   input {
     width: 30%;
     font-weight: normal;
   }
 }
-.editable_heading_action
-{
+
+.editable_heading_action {
   margin-left: 10px;
   display: flex;
   align-items: center;
+
   i {
     margin-top: 2px;
   }
 }
-.editable_heading_action_item
-{
+
+.editable_heading_action_item {
   margin-right: 10px;
   font-size: 14px;
   text-decoration: underline;
