--- a/console/src/components/Services/CustomResolver/CustomResolver.scss
+++ b/console/src/components/Services/CustomResolver/CustomResolver.scss
@@ -8,6 +8,10 @@
   width: 300px;
 }
 
+.wd60 {
+  width: 60%;
+}
+
 .addPaddTop {
   padding-top: 20px;
 }
@@ -54,6 +58,18 @@
   .readMore {
     padding-bottom: 10px;
     text-align: center;
+  }
+}
+
+.iconWrapper{
+  padding: 20px 0;
+
+  .icon {
+    padding-right: 20px;
+
+    img {
+      width: 80%;
+    }
   }
 }
 
@@ -151,4 +167,155 @@
     line-height: 26px;
   }
 
+}
+
+.remoteSchemaImg {
+  padding: 12px 0;
+  padding-bottom: 30px;
+
+  img {
+    width: 700px;
+    max-width: 700px;
+  }
+}
+
+.externalLinkImg {
+  margin-left: 7px;
+  width: 12px;
+  display: inline-block;
+}
+
+.instructions {
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+  color: #909090;
+  display: flex;
+  align-items: center;
+
+  a{
+    color: #909090;
+  }
+
+  a:hover {
+    color: #505050;
+    text-decoration: none;
+  }
+
+  .rightArrow {
+    margin-top: 3px;
+  }
+}
+
+.displayFlex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rightArrow {
+  width: 0;
+  height: 0;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 8px solid #909090;
+  margin-left: 12px;
+  display: inline-block;
+}
+
+.instructions:hover {
+  color: #505050;
+
+  .rightArrow {
+    border-left: 8px solid #505050;
+  }
+}
+
+.tryOutWrapper {
+  padding: 30px 0;
+  display: flex;
+  align-items: center;
+
+  .boxLarge {
+    width: 225px;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
+    background-color: #ffffff;
+    margin-right: 20px;
+    text-align: center;
+    display: inline-block;
+
+    .logoIcon {
+      text-align: center;
+      padding: 20px 0;
+
+      img {
+        width: 76px;
+        display: inline-block;
+      }
+    }
+
+    .default_button {
+      display: inline-block;
+    }
+
+    .instructionsWrapper {
+      margin-top: 20px;
+      border-top: 1px solid #DEDEDE;
+      position: relative;
+
+      .instructions {
+        padding: 12px 0;
+      }
+    }
+
+    .instructionsWrapper:hover {
+      .instructions {
+        color: #505050
+      }
+
+      .rightArrow {
+        border-left: 8px solid #505050;
+      }
+    }
+  }
+
+  .boxSmallWrapper {
+    display: flex;
+    align-items: center;
+
+    .boxSmall {
+      width: 100px;
+      height: 100px;
+      border-radius: 10px;
+      box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
+      background-color: #ffffff;
+      margin-right: 20px;
+      display: inline-block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .imgAws {
+        width: 59px;
+      }
+    }
+
+    a:hover {
+      .boxSmall {
+        transition: all 0.3s ease-out;
+        border: 1px solid #909090;
+      }
+    }
+
+    .instructions {
+      margin-top: 0;
+    }
+  }
+}
+
+.listItems {
+  display: flex;
+  align-items: center;
 }
