--- a/server/src-rsr/insert_trigger.sql.j2
+++ b/server/src-rsr/insert_trigger.sql.j2
@@ -29,6 +29,15 @@ CREATE OR REPLACE FUNCTION {{function_name}}() RETURNS trigger LANGUAGE plpgsql 
           END IF;
       END CASE;
       IF r IS NULL THEN RETURN null; ELSE RETURN r; END IF;
-     ELSE RAISE check_violation using message = 'insert check constraint failed'; RETURN NULL;
-     END IF;
+     ELSE RAISE check_violation using message = json_build_array
+          (
+               'insert check constraint failed',
+               json_build_object(
+                   'input_row',
+                   row_to_json(NEW),
+                   'check_constraint',
+                   {{check_expression_literal}}
+               )
+          ) :: text ; RETURN NULL;
+    END IF;
   END $$;
