--- a/console/src/components/ApiExplorer/ApiExplorer.scss
+++ b/console/src/components/ApiExplorer/ApiExplorer.scss
@@ -270,6 +270,10 @@
   }
   .apiRequestWrapper
   {
+    margin-top: 20px;
+    .headerWrapper {
+      margin-bottom: 20px;
+    }
     .file_upload_wrapper {
       width: 100%;
       text-align: left;
