Fix test, update height for query variables

--- a/console/src/theme/bootstrap.overrides.scss
+++ b/console/src/theme/bootstrap.overrides.scss
@@ -9,7 +9,7 @@
 
 /* Added to persist variables editor window to be visible in the user's initial viewport */
 .variable-editor {
-  min-height: 140px;
+  height: 60px;
 }
 
 input[type="radio"], input[type="checkbox"] {
