--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1204,7 +1204,7 @@ code {
   margin: 10px 0;
 }
 
-.editorActionButtons{
+.pkEditorExpanded {
 }
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
