--- a/community/tools/graphql2chartjs/example/app/src/App.css
+++ b/community/tools/graphql2chartjs/example/app/src/App.css
@@ -5,6 +5,7 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
@@ -29,4 +30,36 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.half_screen {
+  width: 50%;
+  display: inline-block;
+  position: relative;
+}
+
+.chartWrapper {
+  display: flex;
+}
+
+.loadingIndicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media(max-width: 767px) {
+  .half_screen {
+    width: 100%;
+    display: block;
+  }
+  .chartWrapper {
+    display: block;
+  }
+}
+
+.fiftypercent {
+  width: 100px;
+  display: inline-block;
 }
