--- a/console/src/components/ApiExplorer/ApiExplorer.scss
+++ b/console/src/components/ApiExplorer/ApiExplorer.scss
@@ -267,7 +267,7 @@
 
   .closeHeader {
     cursor: pointer;
-    padding-top: 8px;
+    /*padding-top: 8px;*/
     font-size: 16px;
     float: right;
     display: inline-block;
@@ -275,7 +275,7 @@
 
   .showAdminSecret {
     cursor: pointer;
-    padding-top: 8px;
+    /*padding-top: 8px; */
     padding-right: 8px;
     font-size: 16px;
     float: left;
