enable cascade functionality

--- a/console/src/components/Services/EventTrigger/Modify/ModifyEvent.scss
+++ b/console/src/components/Services/EventTrigger/Modify/ModifyEvent.scss
@@ -300,3 +300,10 @@ modifyHeadersCollapsedHeadings {
 .addPaddSmall {
   padding-left: 5px;
 }
+
+.deleteBorder {
+  border: 1px solid #c9302c;
+  padding: 10px;
+  width: 300px
+}
+
