--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1257,6 +1257,10 @@ code {
   margin-right: 20px;
 }
 
+.delete_confirmation_error {
+  margin-left: 15px;
+  color: #d9534f;
+}
 
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
