--- a/cli/metadata/sql/schema_info.sql.tmpl
+++ b/cli/metadata/sql/schema_info.sql.tmpl
@@ -22,14 +22,17 @@ select ist.table_name,
            UNION
            select hdb_fkc.ref_table_table_schema as table_schema,
                   hdb_fkc.ref_table as table_name,
-                  json_object_agg(value, key)::jsonb AS column_mapping,
+                  CASE
+                    WHEN count(key)=1 THEN json_object_agg(key, value)::jsonb
+                    ELSE json_object_agg(value, key)::jsonb
+                  END AS column_mapping,
                   hdb_fkc.table_schema as ref_table_table_schema,
                   hdb_fkc.table_name as ref_table,
                   hdb_rel.rel_name,
                   'array'::text as rel_type
                   from hdb_catalog.hdb_foreign_key_constraint AS hdb_fkc
                   LEFT OUTER JOIN hdb_catalog.hdb_relationship AS hdb_rel
-                     ON hdb_fkc.ref_table_table_schema=hdb_rel.table_schema and hdb_fkc.ref_table=hdb_rel.table_name and hdb_rel.rel_type='array' and (((select count(*) from json_object_keys(hdb_fkc.column_mapping))=1 and hdb_rel.rel_def=jsonb_build_object('foreign_key_constraint_on', jsonb_build_object('table', hdb_fkc.table_name, 'column', (select json_object_keys from json_object_keys(hdb_fkc.column_mapping) LIMIT 1)))) or ((select count(*) from json_object_keys(hdb_fkc.column_mapping))>1 and hdb_rel.rel_def#>>'{manual_configuration,remote_table}'=hdb_fkc.table_name) and hdb_rel.rel_def#>'{manual_configuration, column_mapping}'=hdb_fkc.column_mapping::jsonb)
+                     ON hdb_fkc.ref_table_table_schema=hdb_rel.table_schema and hdb_fkc.ref_table=hdb_rel.table_name and hdb_rel.rel_type='array' and (((select count(*) from json_object_keys(hdb_fkc.column_mapping))=1 and hdb_rel.rel_def=jsonb_build_object('foreign_key_constraint_on', jsonb_build_object('table', hdb_fkc.table_name, 'column', (select json_object_keys from json_object_keys(hdb_fkc.column_mapping) LIMIT 1)))) or ((select count(*) from json_object_keys(hdb_fkc.column_mapping))>1 and hdb_rel.rel_def#>>'{manual_configuration,remote_table}'=hdb_fkc.table_name) and hdb_rel.rel_def#>'{manual_configuration, column_mapping}'=(select json_object_agg(value, key)::jsonb from json_each_text(hdb_fkc.column_mapping)))
                   , json_each_text(column_mapping)
                   GROUP BY hdb_fkc.table_schema, hdb_fkc.table_name, hdb_fkc.ref_table_table_schema, hdb_fkc.ref_table, hdb_fkc.column_mapping::jsonb, hdb_rel.rel_name 
        ) as hdb_rel
