--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1257,6 +1257,9 @@ code {
   margin-right: 20px;
 }
 
+.wd750 {
+  width: 750px;
+}
 
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
