Move searchable component to common and refactor

--- a/console/src/components/Services/Data/TableModify/ModifyTable.scss
+++ b/console/src/components/Services/Data/TableModify/ModifyTable.scss
@@ -54,6 +54,11 @@
   margin-right: 10px;
 }
 
+.column_type_select {
+  width: 200px;
+  font-size: 12px;
+}
+
 .modifyMinWidth {
   min-width: 735px;
 }
