--- a/console/src/theme/bootstrap.overrides.scss
+++ b/console/src/theme/bootstrap.overrides.scss
@@ -9,14 +9,12 @@
 
 .modify_select__control {
   min-height: 30px !important;
-  max-height: 30px;
-  cursor: pointer !important;
+  max-height: 30px !important;
 }
 
 .add_table_column_selector__control {
   min-height: 34px !important;
-  max-height: 34px;
-  cursor: pointer !important;
+  max-height: 34px !important;
 }
 
 .react-selectable__single-value, .react-selectable__placeholder, .react-selectable__indicator.react-selectable__dropdown-indicator {
