--- a/console/src/components/Main/Main.scss
+++ b/console/src/components/Main/Main.scss
@@ -1182,3 +1182,11 @@
   bottom: 50px;
   right: 0px;
 }
+
+.overlappingExclamation {
+  position: relative;
+  font-size: 12px;
+  bottom: 5px;
+  right: 2px;
+  color: #d9534f;
+}
