update metadata status notes

--- a/console/src/components/Main/Main.scss
+++ b/console/src/components/Main/Main.scss
@@ -1190,3 +1190,12 @@
   right: 2px;
   color: #d9534f;
 }
+
+.whiteBackground {
+  width: 5px;
+  height: 8px;
+  background-color: white;
+  position: relative;
+  left: 5px;
+  bottom: 5px;
+}
