--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1296,6 +1296,10 @@ code {
   cursor: pointer;
 }
 
+.wd50percent {
+  width: 50%;
+}
+
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
 
