--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1275,6 +1275,10 @@ code {
   width: 325px;
 }
 
+.wd100Percent {
+  width: 100% !important;
+}
+
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
 
