fetch for inconsistent objects while reloading metadata, fix invalid metadata icon

--- a/console/src/components/Main/Main.scss
+++ b/console/src/components/Main/Main.scss
@@ -1193,10 +1193,10 @@
 
 .iconWhiteBackground {
   width: 5px;
-  background-color: #DEDEDE;
-  height: 6px;
+  background-color: #dedede;
+  height: 7px;
   position: absolute;
-  top: 6px;
-  left: 2.5px;
+  top: 2px;
+  left: 4px;
   z-index: -1;
 }
