--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1270,6 +1270,16 @@ code {
   width: 50%;
 }
 
+.alertDanger {
+  position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -o-sticky;
+  position: -ms-sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
 
