add permission section status

--- a/console/src/components/Services/Data/TableModify/ModifyTable.scss
+++ b/console/src/components/Services/Data/TableModify/ModifyTable.scss
@@ -272,6 +272,10 @@ hr {
     word-wrap: break-word;
   }
 
+  .sectionStatus {
+    font-weight: normal;
+  }
+
   .editPermissionsSection {
     margin: 5px;
     padding: 10px;
