--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -446,11 +446,11 @@ input {
   margin-left: 5px;
 }
 
-.mar_small_neg_left {
+.mar_neg_left {
   margin-left: -10px;
 }
 
-.mar_small_neg_left_1 {
+.mar_small_neg_left {
   margin-left: -5px;
 }
 
@@ -589,6 +589,10 @@ code {
 
 .padd_top {
   padding-top: 20px !important;
+}
+
+.disabled {
+  color: #999;
 }
 
 .select_option_height {
