--- a/console/src/components/Services/Data/TableModify/ModifyTable.scss
+++ b/console/src/components/Services/Data/TableModify/ModifyTable.scss
@@ -186,7 +186,7 @@ hr {
   //  margin-left: 10px;
   //}
 
-  .editPermissionLink {
+  .editPermsLink {
     font-size: 12px;
     position: absolute;
     right: 10px;
@@ -248,15 +248,6 @@ hr {
   height: auto;
 }
 
-.center_radio_label_input {
-  display: flex;
-  align-content: center;
-
-  input {
-    margin-top: 0px;
-  }
-}
-
 .activeEdit {
   padding: 10px;
   background: #fff;
@@ -264,7 +255,7 @@ hr {
   margin-bottom: 15px;
   overflow: auto;
 
-  .editPermissionsHeading {
+  .editPermsHeading {
     font-weight: bold;
     font-size: 16px;
     margin-bottom: 20px;
@@ -275,7 +266,7 @@ hr {
     font-weight: normal;
   }
 
-  .editPermissionsSection {
+  .editPermsSection {
     margin: 5px;
     padding: 10px;
     word-wrap: break-word;
