manual event triggers overflow fix

--- a/console/src/components/Common/TableCommon/Table.scss
+++ b/console/src/components/Common/TableCommon/Table.scss
@@ -194,7 +194,7 @@ a.expanded {
 
 .tableCellCenterAligned {
   text-align: center;
-  overflow: auto !important;
+  overflow: unset !important;
 }
 
 .tableCellExpanded {
